--- a/index.html
+++ b/index.html
@@ -238,16 +238,16 @@
                                     Cloud Computing: AWS
                                 </li>
                                 <li>
-                                    Operating Systems: Windows, Linux
+                                    Operating Systems: Windows, Mac, Linux
                                 </li>
                                 <li>
-                                    Networking: VPN, Firewalls, Routing, Switching
+                                    Networking: PC, Network Security, VPC peering, VPN, MFA 
                                 </li>
                                 <li>
-                                    Automation & Scripting: Python, Bash, Terraform, Cloud Formation
+                                    Automation & Scripting: Python, Bash, Terraform, Cloud Formation, Ansible
                                 </li>
                                 <li>
-                                    Tools: Jenkins, Docker, Git, CI/CD, Github
+                                    Tools: Jenkins, Git, Circle CI, Github, Vagrant
                                 </li>
                                
                             </ul>
