--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <div class="row s-footer__buttons">
                
                 <div class="column xl-6 tab-12">
-                    <a href="mailto:#0" class="btn btn--primary btn--large u-fullwidth">Message Me</a>
+                    <a href="https://wa.me/qr/7PI4JARL5FBWO1" class="btn btn--primary btn--large u-fullwidth">Message Me</a>
                 </div>
           
                 <div class="column xl-6 tab-12">                    
