--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         <div class="column xl-4 lg-5 md-6 tab-12">
                             <h5>Follow Me</h5>
                             <ul class="link-list">
-                                <li><a href="www.linkedin.com/in/augustineikeazotaike">LinkedIn</a></li>
+                                <li><a href="https://www.linkedin.com/in/augustineikeazotaike">LinkedIn</a></li>
                                 <li><a href="#0">Twitter</a></li>
                                 <li><a href="#0">Instagram</a></li>
                                 
