image-added-to -proj-with-link

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         
                     <div class="project-item">
                         <a href="https://medium.com/@ikeaustine/3027fc0475eb" target="_blank">
-                            <img src="images/ad-dc-aws.png" alt="AD-DC on AWS" class="project-image">
+                            <img src="images/folio/images/ad-dc-aws.png" alt="AD-DC on AWS" class="project-image">
                         </a>
                         <div class="project-description">
                             <h3>
