itil-image-update

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <div class="column entry">
                     <a href="images/folio/images/itil-foundation.jpg" class="entry__link glightbox" data-glightbox="title: ITIL FOUNDATION; description: .entry__desc-06">
                         <div class="entry__thumb">
-                            <img src="images/folio/images/itil-foundation.jpg" srcset="images/folio/images/itil-foundation.jpg 1x, images/folio/images/itil-foundation.jpg.jpg 2x" alt="">
+                            <img src="images/folio/images/itil.png" srcset="images/folio/images/itil.png 1x, images/folio/images/itil.png 2x" alt="">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">ITIL FOUNDATION</h4>
