images-updates-after-proj3

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
             <!-- Project 2: AD-DC on AWS -->
             <div class="project-item">
                 <a href="https://medium.com/@ikeaustine/3027fc0475eb" target="_blank">
-                    <img src="images/ad-dc-aws.png" alt="AD-DC on AWS" class="project-image">
+                    <img src="images/folio/images/ad-dc-aws.png" alt="AD-DC on AWS" class="project-image">
                 </a>
                 <div class="project-description">
                     <h3>
@@ -421,7 +421,7 @@
             <!-- Project 3: Deploying a Static Website with AWS CloudFormation -->
             <div class="project-item">
                 <a href="https://medium.com/@ikeaustine/how-to-deploy-a-static-website-with-aws-cloudformation-a-quick-guide" target="_blank">
-                    <img src="images/aws-cloudformation.png" alt="AWS CloudFormation Static Website" class="project-image">
+                    <img src="images/folio/images/aws-cloudformation.png" alt="AWS CloudFormation Static Website" class="project-image">
                 </a>
                 <div class="project-description">
                     <h3>
