reviewed opening message

--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
                     </div> <!-- end section-header -->
 
                     <p class="attention-getter">
-                        Augustine Ikeazota is an IT Support Engineer at QShelter Limited, with over three years of experience in the industry. He excels in software and hardware troubleshooting, system configurations, user training and support, network diagnostics, and overall IT user support.
-                        Throughout his career, Augustine has successfully executed several key technological projects, including the configuration and administration of Odoo CRM ERP solutions, providing comprehensive user training, and managing the seamless migration of 22 users from Google Workspace to Microsoft 365..
+                        Augustine Ikeazota is an IT Support Engineer with a solid foundation in IT support, hands on experience ensuring system reliability, user satisfaction, and secure infrastructure, and has over three years of experience in the industry. He excels in software and hardware troubleshooting, system configurations, user training and support, network diagnostics, and overall IT user support.
+                        Throughout his career, Augustine has successfully executed several key technological projects, including the configuration and administration of Odoo CRM ERP solutions, providing comprehensive user training, Configuring a Self-Managed Active Directory Domain Controller (AD-DC) on AWS and managing the seamless migration of 22 users from Google Workspace to Microsoft 365.
                     </p>
 
                     <p class="attention-getter">
-                        Augustine's skill set encompasses Microsoft 365 Administration, Google Workspace management, Odoo ERP administration, system administration, Application installation and troubleshooting, network configuration, technical issue diagnostics and Python programming. His passion for IT drives him to continually expand his expertise.
-                        Currently, Augustine is embarking on an exciting journey into Cloud and DevOps Engineering. His commitment to upskilling has already led him to earn the AWS Certified Solutions Architect certification, marking the beginning of a new chapter in his career.     
+                       Augustine's skill set encompasses Microsoft 365 Administration, Google Workspace management, Odoo ERP administration, system administration, Application installation and troubleshooting, network configuration, technical issue diagnostics and Python programming. His passion for IT drives him to continually expand his expertise on IT solution delivery.
+                       His commitment to upskilling has already led him to earn the AWS Certified Solutions Architect certification and other certifications necessary for his career growth.
                     </p>
 
                     <div class="grid-list-items s-about__blocks">
